--- a/career-map-io/index.html
+++ b/career-map-io/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="" />
+  <link rel="icon" type="image/svg+xml" href="/src/assets/Logo/career-path.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CareerMap.io</title>
 </head>
